{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 85,
  "lineage": "e6eab4e6-a612-83f1-c67d-243e8e9d1332",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/app-int-lb/frontendIPConfigurations/InternalIPAddress",
                "name": "InternalIPAddress",
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/virtualNetworks/my3tier-vnet/subnets/app-subnet"
              }
            ],
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/app-int-lb",
            "location": "eastus",
            "name": "app-int-lb",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "my3tier-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "project": "3tier-terraform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.app",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/web-pub-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/publicIPAddresses/my3tier-rg-web-ip"
              }
            ],
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/web-pub-lb",
            "location": "eastus",
            "name": "web-pub-lb",
            "resource_group_name": "my3tier-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "project": "3tier-terraform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.web",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/app-int-lb/backendAddressPools/AppBackendPool",
            "loadbalancer_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/app-int-lb",
            "name": "AppBackendPool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.app",
            "azurerm_resource_group.main",
            "azurerm_subnet.app",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/web-pub-lb/backendAddressPools/WebBackendPool",
            "loadbalancer_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/web-pub-lb",
            "name": "WebBackendPool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.web",
            "azurerm_public_ip.web",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/app-int-lb/probes/TCP-Probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/app-int-lb",
            "name": "TCP-Probe",
            "number_of_probes": 2,
            "port": 8080,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.app",
            "azurerm_resource_group.main",
            "azurerm_subnet.app",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/web-pub-lb/probes/HTTP-Probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/web-pub-lb",
            "name": "HTTP-Probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.web",
            "azurerm_public_ip.web",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/app-int-lb/backendAddressPools/AppBackendPool"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/app-int-lb/frontendIPConfigurations/InternalIPAddress",
            "frontend_ip_configuration_name": "InternalIPAddress",
            "frontend_port": 8080,
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/app-int-lb/loadBalancingRules/AppPort",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/app-int-lb",
            "name": "AppPort",
            "probe_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/app-int-lb/probes/TCP-Probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.app",
            "azurerm_lb_backend_address_pool.app",
            "azurerm_lb_probe.app",
            "azurerm_resource_group.main",
            "azurerm_subnet.app",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/web-pub-lb/backendAddressPools/WebBackendPool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/web-pub-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/web-pub-lb/loadBalancingRules/HTTP",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/web-pub-lb",
            "name": "HTTP",
            "probe_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/loadBalancers/web-pub-lb/probes/HTTP-Probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.web",
            "azurerm_lb_backend_address_pool.web",
            "azurerm_lb_probe.web",
            "azurerm_public_ip.web",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/networkInterfaces/my3tier-rg-db-nic",
            "internal_domain_name_suffix": "eh2wf2zx442u5dagdg5zmq42xh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/virtualNetworks/my3tier-vnet/subnets/db-subnet"
              }
            ],
            "location": "eastus",
            "name": "my3tier-rg-db-nic",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "my3tier-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.db",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "eastus",
            "name": "app-nsg",
            "resource_group_name": "my3tier-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAppPort",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "eastus",
            "name": "db-nsg",
            "resource_group_name": "my3tier-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowMySQL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "eastus",
            "name": "web-nsg",
            "resource_group_name": "my3tier-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/publicIPAddresses/my3tier-rg-web-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.32.13",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "my3tier-rg-web-ip",
            "resource_group_name": "my3tier-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "project": "3tier-terraform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/virtualNetworks/my3tier-vnet/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "my3tier-rg",
            "virtual_network_name": "my3tier-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/virtualNetworks/my3tier-vnet/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "my3tier-rg",
            "virtual_network_name": "my3tier-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/virtualNetworks/my3tier-vnet/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "my3tier-rg",
            "virtual_network_name": "my3tier-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/virtualNetworks/my3tier-vnet/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/virtualNetworks/my3tier-vnet/subnets/app-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.app",
            "azurerm_resource_group.main",
            "azurerm_subnet.app",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/virtualNetworks/my3tier-vnet/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/virtualNetworks/my3tier-vnet/subnets/db-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.db",
            "azurerm_resource_group.main",
            "azurerm_subnet.db",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/virtualNetworks/my3tier-vnet/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/virtualNetworks/my3tier-vnet/subnets/web-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web",
            "azurerm_resource_group.main",
            "azurerm_subnet.web",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f362f921-f737-4fb9-8c06-19bf9643dcbf",
            "id": "/subscriptions/18671002-ab7d-4118-9137-6ea849f6ae65/resourceGroups/my3tier-rg/providers/Microsoft.Network/virtualNetworks/my3tier-vnet",
            "location": "eastus",
            "name": "my3tier-vnet",
            "resource_group_name": "my3tier-rg",
            "tags": {
              "environment": "dev",
              "project": "3tier-terraform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}